# diophantine

./: Cargo.toml  README.md  diagram.plantuml
maude_src/: CMakeLists.txt  diophantineSystem.cc  diophantineSystem.hh  main.cc
src/: lib.rs  row.rs  system.rs
